soda and approx tr update

--- a/_posts/2019-09-28-yogafall19.md
+++ b/_posts/2019-09-28-yogafall19.md
@@ -6,5 +6,5 @@ categories: post
 personal: true
 ---
 
-I'm a certified yoga instructor, and I completed by 200 RYT in the summer of 2019. 
+I completed my 200 RYT in the summer of 2019. 
 I teach [yoga classes at UW](https://www.washington.edu/ima/classes/mindfulness/).
