--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -112,7 +112,7 @@ as well as statistical reconstruction problems.
 
 \header{Publications}
 \begin{enumerate}
-\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction,'' in submission. 
+\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction,'' https://arxiv.org/abs/2012.06713, Arxiv 2020, in submission. 
 \item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang.  ``Scheduling with Communication Delays via LP Hierarchies and Clustering II: Weighted Completion Times on Related Machines," in SODA 2021.\\
 \item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Scheduling with Communication Delays via LP Hierarchies and Clustering,'' in FOCS 2020. \\
 \item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' in SODA 2020. 
@@ -132,7 +132,7 @@ as well as statistical reconstruction problems.
 
 \bigskip
 \employer{Microsoft Research Intern}{Summer 2020}{Redmond, WA (held virtually)}
-Hosted by Janardhan Kulkarni in the Algorithms group.
+Hosted by Janardhan Kulkarni in the Algorithms group
 
 \bigskip
 \employer{Dagstuhl Seminar in Scheduling}{February 2020}{Shloss Dagstuhl}
@@ -140,11 +140,12 @@ Hosted by Janardhan Kulkarni in the Algorithms group.
 \bigskip
 \employer{Nebraska Conference for Women in Mathematics}{February 2019}{University of Nebraska Lincoln}
 
+\clearpage
 
 \bigskip
 \employer{Women in Theory}{June 2018}{Harvard University}
 
-\clearpage
+% \clearpage
 
 \bigskip
 \employer{Leadership Alliance Summer Research Program}{Summer 2014} {Brown University}
@@ -262,7 +263,7 @@ One of 40 students honored for making significant contributions to CMU's communi
 % \smallskip
 % The Leadership Alliance selects talented undergraduates from underrepresented groups with the aim to
 % provide them mentorship and resources to becoming leaders in academia and industry. 
- \bigskip
+%  \medskip
 
 
 \header{Teaching}
