--- a/_posts/2020-12-28-SODA21.md
+++ b/_posts/2020-12-28-SODA21.md
@@ -5,4 +5,4 @@ date:   2020-12-28
 categories: post
 news: true
 ---
-In a couple weeks, I'll be presenting more work on scheduling jobs with communication delays at SODA 2021.
+I presented more work on scheduling jobs with communication delays at SODA 2021. Check out the [talk](https://youtu.be/swS_AHk43fI).
