--- a/_posts/2019-01-07-SODAconf20.md
+++ b/_posts/2019-01-07-SODAconf20.md
@@ -3,7 +3,7 @@ layout: post
 title:  SODA 2020
 date:   2020-01-07
 categories: post
-news: true
+news: false
 ---
 Attending my first SODA this week in Salt Lake City.
 <br>
