--- a/_posts/2020-03-27-311sp20.md
+++ b/_posts/2020-03-27-311sp20.md
@@ -3,7 +3,7 @@ layout: post
 title:  311 Spring 2020
 date:   2020-03-25
 categories: post
-news: true
+news: false
 ---
 I'm co-teaching [CSE 311](https://courses.cs.washington.edu/courses/cse311/20sp/) during the apocalyptic Spring 
 2020 quarter.
