--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -80,7 +80,7 @@ samidavies.com
 \header{Education}
 
 \bigskip
-\employer{University of Washington}{2016 - present}{~}
+\employer{University of Washington}{2016 - 2021 (expected) }{~}
 %\schoolwithcourses{Carnegie Mellon University}
 \vspace{-4mm}
 M.S. in Mathematics, 2019\\
@@ -106,17 +106,19 @@ B.S. in Mathematical Sciences, Minor in Economics
 \bigskip
 
 \header{Research Interests}
-I design algorithms for a wide range of problems, including combinatorial optimization questions in scheduling and allocation,
+I design algorithms for a wide range of problems, including combinatorial optimization questions in scheduling and resource allocation,
 as well as statistical reconstruction problems. 
 \bigskip
 
 \header{Publications}
-\begin{enumerate}
-\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction,'' https://arxiv.org/abs/2012.06713, Arxiv 2020, in submission. 
-\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang.  ``Scheduling with Communication Delays via LP Hierarchies and Clustering II: Weighted Completion Times on Related Machines," in SODA 2021.\\
-\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Scheduling with Communication Delays via LP Hierarchies and Clustering,'' in FOCS 2020. \\
-\item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' in SODA 2020. 
-\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Cyrus Rashtchian. ``Reconstructing Trees from Traces,'' in COLT 2019. 
+\begin{enumerate}	
+\item Sami Davies, Arya Mazumdar, Soumyabrata Pal, Cyrus Rashtchian. ``New Lower Bounds on the Total Variation Distance Between Mixtures of Two Gaussians,'' in submission. \\
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Sai Sandeep, Jakub Tarnawski, Yihao Zhang. ``On the Hardness of Scheduling with Non-Uniform Communication Delays,'' arXiv 2021, https://arxiv.org/abs/2105.00111.\\	
+\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction: Algorithms,'' ISIT 2021. Full version: https://arxiv.org/abs/2012.06713.
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang.  ``Scheduling with Communication Delays via LP Hierarchies and Clustering II: Weighted Completion Times on Related Machines," SODA 2021.\\
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Scheduling with Communication Delays via LP Hierarchies and Clustering,'' FOCS 2020. \\
+\item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' SODA 2020. 
+\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Cyrus Rashtchian. ``Reconstructing Trees from Traces,'' COLT 2019. Full version to appear in the Annals of Applied Probability
 \item Sami Davies, Chenxiao Xue, Carl R. Yerger, ``Algorithms for finding knight's tours on Aztec diamonds,'' 
 \textit{Involve, a Journal of Mathematics}, Vol. 10 (2017), No. 5, 721-734.
 \end{enumerate}
@@ -131,16 +133,18 @@ as well as statistical reconstruction problems.
 \header{Invited participation and internships}
 
 \bigskip
-\employer{Microsoft Research Intern}{Summer 2020}{Redmond, WA (held virtually)}
-Hosted by Janardhan Kulkarni in the Algorithms group
+\employer{Microsoft Research Intern}{Summer 2020}{Redmond, WA (virtual)}
+Hosted by Janardhan Kulkarni and Jakub Tarnawski in the Algorithms group
 
 \bigskip
 \employer{Dagstuhl Seminar in Scheduling}{February 2020}{Shloss Dagstuhl}
 
+\clearpage	
+
 \bigskip
 \employer{Nebraska Conference for Women in Mathematics}{February 2019}{University of Nebraska Lincoln}
 
-\clearpage
+
 
 \bigskip
 \employer{Women in Theory}{June 2018}{Harvard University}
@@ -314,14 +318,18 @@ I served as a teaching assistant for the following courses:
 \bigskip
 \employer{External Reviewer}{}{~}
 \vspace{-5mm}
-SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}, MFCS 2020, ISAAC 2020, \emph{Operations Research}
+SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}, MFCS 2020, ISAAC 2020, \emph{Operations Research}, PODS 2021, WADS 2021, ICALP 2021
 
 \bigskip
 \employer{Washington Directed Reading Program}{2018-present}{~}
 \vspace{-5mm}
 Mentor for the WDRP, which pairs undergraduate students with mathematics graduate student mentors for quarter-long independent reading project, 
-in the spring of 2019 and the fall of 2020. Helped conceive and write grants for the WDRP in the summer of 2018.
+in the spring of 2019, fall of 2020, and winter of 2021. Helped conceive and write grants for the WDRP in the summer of 2018.
 
+\bigskip
+\employer{Mastery Learning Hour}{2021-present}{~}
+\vspace{-5mm}
+Math tutor for K-12 students. Provide support to students remotely during COVID-19 pandemic.
 
 \bigskip
 \employer{Freedom Education Project Puget Sound (FEPPS)}{2017-2019}{~}
