--- a/assets/CV.tex
+++ b/assets/CV.tex
@@ -47,9 +47,9 @@
 \vspace*{-55pt}
 % Title bar
 \begin{flushright}
-daviess@uw.edu \\
-Department of Mathematics\\
-University of Washington
+sami@northwestern.edu \\
+Department of Computer Science\\
+Northwestern University
 \end{flushright}
 
 \begin{center}
@@ -80,11 +80,11 @@ samidavies.com
 \header{Education}
 
 \bigskip
-\employer{University of Washington}{2016 - 2021 (expected) }{~}
+\employer{University of Washington}{2016 - 2021 }{~}
 %\schoolwithcourses{Carnegie Mellon University}
 \vspace{-4mm}
 M.S. in Mathematics, 2019\\
-Ph.D. in Mathematics
+Ph.D. in Mathematics, 2021
 % 3.86/4.0
 %In Major QPA: 3.77/4.0\\
  \bigskip
@@ -99,22 +99,25 @@ M.S. in Mathematics
 \employer{Carnegie Mellon University}{2011-2015}{~}
 %\schoolwithcourses{Carnegie Mellon University}
 \vspace{-4mm}
-B.S. in Mathematical Sciences, Minor in Economics 
+B.S. in Mathematical Sciences, Minor in Economics\\
+College and University Honors 
 % 3.78/4.0\\
 
 
 \bigskip
 
-\header{Research Interests}
-I design algorithms for a wide range of problems, including combinatorial optimization questions in scheduling and resource allocation,
-as well as statistical reconstruction problems. 
+\header{My Research in Three Sentences}
+I design algorithms for a wide range of problems in combinatorial optimization.
+My PhD focused on classic questions in approximation algorithms. 
+For my post doctoral work, I am most interested in developing theoretical foundations for learning-augmented algorithms.
 \bigskip
 
 \header{Publications}
 \begin{enumerate}	
-\item Sami Davies, Arya Mazumdar, Soumyabrata Pal, Cyrus Rashtchian. ``New Lower Bounds on the Total Variation Distance Between Mixtures of Two Gaussians,'' in submission. \\
-\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Sai Sandeep, Jakub Tarnawski, Yihao Zhang. ``On the Hardness of Scheduling with Non-Uniform Communication Delays,'' arXiv 2021, https://arxiv.org/abs/2105.00111.\\	
-\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction: Algorithms,'' ISIT 2021. Full version: https://arxiv.org/abs/2012.06713.
+\item Sami Davies, Samir Khuller, Shirley Zhang. ``Balancing Flow Time and Energy Consumption,'' SPAA 2022.\\
+\item Sami Davies, Arya Mazumdar, Soumyabrata Pal, Cyrus Rashtchian. ``New Lower Bounds on the Total Variation Distance Between Mixtures of Two Gaussians,'' ALT 2022. \\
+\item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Sai Sandeep, Jakub Tarnawski, Yihao Zhang. ``On the Hardness of Scheduling with Non-Uniform Communication Delays,'' SODA 2022.\\	
+\item Sami Davies, 	Mikl\'os Z.\ R\'acz, Benjamin Schiffer, Cyrus Rashtchian. ``Approximate Trace Reconstruction: Algorithms,'' ISIT 2021.\\
 \item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang.  ``Scheduling with Communication Delays via LP Hierarchies and Clustering II: Weighted Completion Times on Related Machines," SODA 2021.\\
 \item Sami Davies, Janardhan Kulkarni, Thomas Rothvoss, Jakub Tarnawski, Yihao Zhang. ``Scheduling with Communication Delays via LP Hierarchies and Clustering,'' FOCS 2020. \\
 \item Sami Davies, Thomas Rothvoss, Yihao Zhang. ``A Tale of Santa Claus, Hypergraphs and Matroids,'' SODA 2020. 
@@ -130,16 +133,28 @@ as well as statistical reconstruction problems.
 % \item \textit{Searching for Combinatorial Interpretations Using the Bhargava Defined Factorial}. 2013 Summer Undergraduate Applied Mathematics Institute Symposium. Joint presentation with Joe Gault.
 % \end{enumerate}
 
+\clearpage
+
 \header{Invited participation and internships}
+
+\bigskip
+\employer{IDEAL Workshop on Algorithms for Massive Data Sets}{May 2022}{Evanston, IL (Hybrid)}
+Virtual talk on learning-augmented algorithms
+
+\bigskip
+\employer{CanaDAM (Canadian Discrete and Algorithmic Mathematics)}{May 2021}{Virtual talk on scheduling with communication delays}
+
 
 \bigskip
 \employer{Microsoft Research Intern}{Summer 2020}{Redmond, WA (virtual)}
 Hosted by Janardhan Kulkarni and Jakub Tarnawski in the Algorithms group
 
+	
+
 \bigskip
 \employer{Dagstuhl Seminar in Scheduling}{February 2020}{Shloss Dagstuhl}
 
-\clearpage	
+
 
 \bigskip
 \employer{Nebraska Conference for Women in Mathematics}{February 2019}{University of Nebraska Lincoln}
@@ -230,6 +245,12 @@ Hosted by Janardhan Kulkarni and Jakub Tarnawski in the Algorithms group
 \header{Awards and Fellowships}
 \bigskip
 
+\employer{CI Fellow}{2021-2021}{Northwestern University}
+\smallskip
+Awarded funding for a two-year postdoctoral fellowship\\
+
+\bigskip
+
 \employer{Tanzi-Egerton Fellow}{2020}{University of Washington}
 \smallskip
 Awarded to an outstanding female, senior graduate student in mathematics\\
@@ -246,29 +267,30 @@ Awarded to two students who were exceptional in their preliminary exams
 and first year courses\\
 \bigskip
 
-\employer{Department of Mathematics, Statistics, and Computer Science Fellowship}{2015}{University of Illinois at Chicago}
-\smallskip
-Awarded to outstanding incoming first year students in the department of MSCS at UIC\\
-\bigskip
+% \employer{Department of Mathematics, Statistics, and Computer Science Fellowship}{2015}{University of Illinois at Chicago}
+% \smallskip
+% Awarded to outstanding incoming first year students in the department of MSCS at UIC\\
+% \bigskip
 
 
-\employer{Senior Leadership Recognition Award}{2015}{Carnegie Mellon University}
+% \employer{Senior Leadership Recognition Award}{2015}{Carnegie Mellon University}
 
-\smallskip
+% \smallskip
 
-One of 40 students honored for making significant contributions to CMU's community 
- \bigskip
+% One of 40 students honored for making significant contributions to CMU's community 
+%  \bigskip
 
- \employer{College and University Honors}{2015}{Carnegie Mellon University}
 
-\bigskip
 
- \employer{Leadership Alliance Scholar}{2014}{~}
+% \bigskip
+
+%  \employer{Leadership Alliance Scholar}{2014}{~}
 % \smallskip
 % The Leadership Alliance selects talented undergraduates from underrepresented groups with the aim to
 % provide them mentorship and resources to becoming leaders in academia and industry. 
 %  \medskip
 
+\clearpage
 
 \header{Teaching}
 
@@ -311,23 +333,30 @@ I served as a teaching assistant for the following courses:
 %\end{achievements}
 
 
-\clearpage
 
 \header{Service and  outreach}
 
 \bigskip
 \employer{External Reviewer}{}{~}
 \vspace{-5mm}
-SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}, MFCS 2020, ISAAC 2020, \emph{Operations Research}, PODS 2021, WADS 2021, ICALP 2021
+SODA 2020, ICALP 2020, \emph{IEEE Transactions on Information Theory}, MFCS 2020, ISAAC 2020, \emph{Operations Research}, 
+PODS 2021, WADS 2021, ICALP 2021, STOC 2022, ICALP 2022, ESA 2022, \emph{Discrete Mathematics}
+
 
 \bigskip
-\employer{Washington Directed Reading Program}{2018-present}{~}
+\employer{Northwestern Junior Theorists Workshop}{December 2021}{~}
 \vspace{-5mm}
-Mentor for the WDRP, which pairs undergraduate students with mathematics graduate student mentors for quarter-long independent reading project, 
-in the spring of 2019, fall of 2020, and winter of 2021. Helped conceive and write grants for the WDRP in the summer of 2018.
+Co-organized a workshop that highlighted rising theoretical computer scientists
+https://theory.cs.northwestern.edu/events/2021-junior-theorists-workshop/
 
 \bigskip
-\employer{Mastery Learning Hour}{2021-present}{~}
+\employer{Washington Directed Reading Program}{2018-2021}{~}
+\vspace{-5mm}
+Mentor for the WDRP, which pairs undergraduate students with graduate student mentors for independent reading project.
+Helped conceive and write grants for the WDRP in summer 2018
+
+\bigskip
+\employer{Mastery Learning Hour}{2021}{~}
 \vspace{-5mm}
 Math tutor for K-12 students. Provide support to students remotely during COVID-19 pandemic.
 
@@ -343,7 +372,7 @@ Instructor spring of 2018.
 
 
 \bigskip
-\employer{Assocation for Women in Math}{2016-present}{~}
+\employer{Assocation for Women in Math}{2016-2021}{~}
 \vspace{-5mm}
 Member since 2016. Secretary of the UW student chapter 2018-2019 academic year.
 
