--- a/_bib/2019-03-20-TR.bib
+++ b/_bib/2019-03-20-TR.bib
@@ -1,16 +1,18 @@
 ---
-title: Reconstructing Traces from Trees
+title: Data races and the discrete resource-time tradeoff problem with resource reuse over paths.
 
 authors:
-  - daviess
-  - Cyrus
-  - Miki
+  - rdas
+  - shih
+  - sduppala
+  - jlynch
+  - earkin
+  - rchowdhury
+  - jmitchell
+  - sskiena
 
 extra:
-venue: COLT 2019
-link: https://arxiv.org/abs/1902.05101
+venue: SPAA 2019
+link: https://dl.acm.org/doi/abs/10.1145/3323165.3323209
 
-links:
-  - text: slides
-    url: assets/TR-50.pdf
 ---
