--- a/_bib/2019-04-18-SPAA.bib
+++ b/_bib/2019-04-18-SPAA.bib
@@ -2,14 +2,14 @@
 title: Data races and the discrete resource-time tradeoff problem with resource reuse over paths.
 
 authors:
-  - rdas
-  - shih
+  - rathish
+  - shihyu
   - sduppala
   - jlynch
   - earkin
-  - rchowdhury
-  - jmitchell
-  - sskiena
+  - rezaul
+  - joe
+  - skiena
 
 extra:
 venue: SPAA 2019
