--- a/_bib/2022-05-15-spaa.bib
+++ b/_bib/2022-05-15-spaa.bib
@@ -1,13 +1,14 @@
 ---
-title: Balancing Flow Time and Energy Consumption
+title: Fair Labeled Clustering 
 
 
 authors:
-  - daviess
-  - Samir
-  - Shirley
+  - seyed
+  - sduppala
+  - john
+  - brian
 
 extra:
-venue: SPAA 2022
-link: https://arxiv.org/abs/2206.01360
+venue: KDD 2022
+link: https://dl.acm.org/doi/abs/10.1145/3534678.3539451
 ---
